# AI_WMD_PIAIC

./: Temperature_Forecasting.ipynb  package-lock.json  package.json  practice.js  practice.ts  tsconfig.json  typescript_practice.ts
Quarter 1/Assignment 1/: assignment_1.js  assignment_1.ts  tsconfig.json
Quarter 1/Assignment 2/: Assignment_2.js  Assignment_2.ts
Quarter 1/Assignment 3/: Assignment_3.js  Assignment_3.ts
Quarter 1/Assignment 4/: Assignment_4.js  Assignment_4.ts  tsconfig.json
Quarter 2/Assignment 2/: package-lock.json  package.json
Quarter 2/Assignment 2/app/: googleFonts.css  layout.tsx  page.tsx
Quarter 3/Assignment01/: README.md  pyproject.toml
Quarter 3/Assignment01/student_app/: main.py
Typescript_Assignment_1/src/: 10_Adding_Comments.ts  11_Names.ts  12_Greetings.ts  13_Your_Own_Array.ts  14_Guest_List.ts  15_Changing_Guest_List.ts  16_More_Guests.ts  17_Shrinking_Guest_List.ts  18_Seeing_The_World.ts  19_Dinner_Guests.ts  20_Creating_List.ts  21_Creating_Object.ts  22_Intentional_Error.ts  23_Conditional_Tests.ts  24_More_Cnditional_Tests.ts  25_Alien_Color_#1.ts  26_Alien_Color_#2.ts  27_Alien_Color_#3.ts  28_Stages_Of_Life.ts  29_Favourite_Fruit.ts  2_Personal_Message.ts  30_Hello_Admin.ts  31_No_Users.ts  32_Checking_Usernames.ts  33_Ordinal_Numbers.ts  34_Pizzas.ts  35_Animals.ts  36_TShirt.ts  37_Large_Shirts.ts  38_Cities.ts  39_City_Names.ts  3_Name_Cases.ts  40_Album.ts  41_Magicians.ts  42_Great_Magicians.ts  43_Unchanged_Names.ts  44_Sandwiches.ts  45_Cars.ts  4_Famous_Quote.ts  5_Famous_Quote_2.ts  (+3 more)
(+4 files in other folders)
