[tool.poetry]
name = "student-app"
version = "0.1.0"
description = ""
authors = ["Tauqueer Danish <tauqueerdanish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.scripts]
dev= "student_app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
